# trivial-graphics

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-accelerate.txt  requirements-all.txt  requirements-quickwindow.txt  requirements-slimrr.txt  setup.py  test.py  test2.py
omgl/: dtypes.py  object.py
omgl/buffer/: __init__.py  buffer.py  buffer_pointer.py  vertex_array.py
omgl/shader/: __init__.py  enumerations.py  glsl.py  interface.py  program.py  shader.py  stage.py
trivial/: __init__.py  draw.py  dtypes.py  geometry.py  graphics.py  mesh.py  model.py  object.py  pipeline.py  proxy.py  texture.py  version.py
trivial/buffer/: buffer.py  buffer_pointer.py
trivial/shader/: __init__.py  default.py  enumerations.py  glsl.py  interface.py  parse.py  program.py  shader.py  stage.py  types.py  variables.py
