[build-system]
requires = ["setuptools>=72.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trivial-graphics"
version = "0.0.2"
authors = [
  { name="George Watson", email="gigolo@hotmail.co.uk" },
]
description = "Pythonic OpenGL Bindings"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pyopengl",
    "pillow",
    "pyglsl>=0.0.6",
]
classifiers = [
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "License :: OSI Approved :: BSD License",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
license = { text = "BSD" }

[project.urls]
Homepage = "https://github.com/takeiteasy/trivial-graphics"
Issues = "https://github.com/takeiteasy/trivial-graphics/issues"
